# tree-finder

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  app.js  climbable-trees-agent-spec.md  docker-compose.yml  index.html  pyproject.toml  requirements-tierb.txt  requirements-tierc.txt  requirements.txt  start.sh  style.css
api/: __init__.py  main.py  photos.py  reach_helpers.py  schemas.py
data/: buffalo_tree_inventory.json  cities.json  honolulu_exceptional_trees.json  sample_portland.geojson  sample_portland_osm.geojson
db/: __init__.py  connection.py  demo_repo.py  live_repo.py  migrate.py  repository.py
db/migrations/: 001_init.sql  002_tierb.sql  (+1 more)
docs/: app.js  index.html  style.css
features/: __init__.py  dbh_feature.py  species_data.py  species_prior.py
frontend/: app.js  index.html  style.css
ingest/: __init__.py  clean_tree.py  crosswalk.py  dedup.py  fetcher.py  pipeline.py  run_ingest.py  sources.yaml
score/: __init__.py  climbability.py  reach.py
scripts/: export_static.py
tests/: test_api.py  test_clean_tree.py  test_climbability.py  test_crosswalk.py  test_dbh_feature.py  test_pipeline.py  test_reach.py  test_species_prior.py  test_tierb_overpass.py  test_tierb_parcels.py  test_tierb_scoring.py  test_tierb_tiling.py  test_tierc_geometry.py  test_tierc_mapillary.py  test_tierc_pipeline.py  test_tree_photo.py
tierB/: __init__.py  detect.py  geometry.py  overpass.py  parcels.py  run_reconcile.py  tiling.py
tierC/: __init__.py  backends.py  camera.py  contract.py  geometry.py  mapillary.py  multiview.py  pipeline.py
(+2 files in other folders)
